--- a/css/style.css
+++ b/css/style.css
@@ -41,21 +41,32 @@ h4 {
 }
 
 
-.fa-facebook {
+.facebook {
   background: #3B5998;
   color: white;
 }
 
-.fa-linkedin {
+.linkedin {
   background: #007bb5;
   color: white;
 }
 
-.fa-instagram {
+.instagram {
   background: #125688;
   color: white;
 }
 
 .fa:hover {
     opacity: 0.7;
+}
+
+.circ {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  /* text-align: center;
+  text-decoration: none; */
+  margin: 5px 2px;
+  border-radius: 50%;
 }
