--- a/css/old_style.css
+++ b/css/old_style.css
@@ -161,3 +161,13 @@ button:hover {
   padding:0 20px;
   z-index: -1;
 }
+
+#subscribe-showcase {
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding:0 20px;
+  z-index: -1;
+}
